@@ -3,6 +3,7 @@
 	  polling operation (polling is not bad here because the parport data
 	  collection is collecting 100 % CPU anyway
 	* Optimized drawing for lines that have always the same value
+	* Changed shortcuts for start/stop to F5/F6
 
 2005-06-10  Bernhard Walle <bernhard.walle@gmx.de>
 	* Changed schematic:
